--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ input[type=text], input[type=date] {
     box-sizing: border-box;
     margin-bottom: 8px;
     font-size: 24px;
+    width: 100%;
 }
 
 .btn-submit {
